# ros2_needle_shape_publisher

./: .gitignore  README.md  package.xml  requirements.txt  setup.cfg  setup.py
demo/: FBG-Cam-Data_prediction_FBG-weights_needle_3CH_4AA_v2_04-InsExpmt-04-12-2021.mat  README.md
launch/: needle.launch.py  sensorized_shapesensing_needle.launch.py  sensorized_shapesensing_needle_decomposed.launch.py  shapesensing_needle_demo.launch.py
matlab/: Adjoint.m  FSframe.m  NeedleShapePublisher.asv  NeedleShapePublisher.m  Rot_x.m  Rot_y.m  Rot_z.m  Simpson_vec_int.m  ad_se3.m  arclength.m  calibrate_fbgsensors.m  const_curv_shape.m  costfn_opt_v2_singlebend.m  demo_needle_shape_publisher.m  fn_intgEP_w0_Dimitri.m  fn_intgEP_w0_Rinit_Dimitri.m  interp_pts.m  matr.m  needle_shape_publisher.m  parse_fbgneedle_json.m  predict_insertion_singlelayer.m  singlebend_Rinit_needleshape.m  singlebend_needleshape.m
needle_data/: shapesensing_needle_properties.mat
needle_data/3CH-4AA-0004/: needle_params_2021-08-16_Jig-Calibration_best.json
needle_data/demo_shapes/: needle_3dshape_105-mm.csv  needle_3dshape_115-mm.csv  needle_3dshape_125-mm.csv  needle_3dshape_15-mm.csv  needle_3dshape_25-mm.csv  needle_3dshape_35-mm.csv  needle_3dshape_45-mm.csv  needle_3dshape_55-mm.csv  needle_3dshape_65-mm.csv  needle_3dshape_75-mm.csv  needle_3dshape_85-mm.csv  needle_3dshape_95-mm.csv
needle_shape_publisher/: sensorized_needle.py  sensorized_shape_sensing_needle.py  sensorized_shape_sensing_needle_threaded.py  shape_sensing_needle.py  shape_sensing_needle_demo.py  utilities.py
(+6 files in other folders)
