<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>needle_shape_publisher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dlezcan1@jhu.edu">Dimitri Lezcano</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <!-- Messages and services -->
  <depend>rcl_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>std_srvs</depend>

  <!-- Custom packages -->
  <!--depend>needle-shape-sensing</depend-->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
